# nbedit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  system-prompt.md
nbedit/: app.js  app.py
